Fix typos in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compateble" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kevin's Knick Knacks</title>
     <link href="style.css" rel="stylesheet">
@@ -51,7 +51,7 @@
         <a href="index.html">HOME</a>
     </div>
     <div id="copyright">
-        &copy; Otech Web Programing
+        &copy; Otech Web Programming
     </div>
 </footer>
 </body>
