Remove unneeded code from index.html and style.css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </header>
 <main>
     <aside>
-        <div id="sideBarHeading"><h1>FEATURED ITEMS</h1></div>
+        <div id="sideBarHeading">FEATURED ITEMS</div>
         <div id="sideBarContainer">
             <a href="shop.html#cardNumber8"><img class="featuredImage" src="images/images/shop/thumbnails/BobRoss_Thumb.jpg" alt="Bob Ross">
                 <p class="bold">Bob Ross</p>
