--- a/shop.html
+++ b/shop.html
@@ -35,104 +35,6 @@
                 </div>
                 <a class="tableCell borderBottom removeLink" href="#">Remove</a>
             </div>
-            <div class="tableRow">
-                <div class="tableCell">
-                    Elephant Figurines
-                </div>
-                <div class="tableCell">
-                    &dollar; 18.95
-                </div>
-            </div>
-            <div class="tableRow">
-                <div class="tableCell borderBottom">
-
-                </div>
-                <a class="tableCell borderBottom removeLink" href="#">Remove</a>
-            </div>
-            <div class="tableRow">
-                <div class="tableCell">
-                    Squishy Caterpillar
-                </div>
-                <div class="tableCell">
-                    &dollar; 9.99
-                </div>
-            </div>
-            <div class="tableRow">
-                <div class="tableCell borderBottom">
-
-                </div>
-                <a class="tableCell borderBottom removeLink" href="#">Remove</a>
-            </div>
-            <div class="tableRow">
-                <div class="tableCell">
-                    Mini Cactus
-                </div>
-                <div class="tableCell">
-                    &dollar; 12.99
-                </div>
-            </div>
-            <div class="tableRow">
-                <div class="tableCell borderBottom">
-
-                </div>
-                <a class="tableCell borderBottom removeLink" href="#">Remove</a>
-            </div>
-            <div class="tableRow">
-                <div class="tableCell">
-                    Nano Nanoblocks
-                </div>
-                <div class="tableCell">
-                    &dollar; 32.95
-                </div>
-            </div>
-            <div class="tableRow">
-                <div class="tableCell borderBottom">
-
-                </div>
-                <a class="tableCell borderBottom removeLink" href="#">Remove</a>
-            </div>
-            <div class="tableRow">
-                <div class="tableCell">
-                    Cute Goat
-                </div>
-                <div class="tableCell">
-                    &dollar; 15.95
-                </div>
-            </div>
-            <div class="tableRow">
-                <div class="tableCell borderBottom">
-
-                </div>
-                <a class="tableCell borderBottom removeLink" href="#">Remove</a>
-            </div>
-            <div class="tableRow">
-                <div class="tableCell">
-                    Lawn Gnome
-                </div>
-                <div class="tableCell">
-                    &dollar; 7.95
-                </div>
-            </div>
-            <div class="tableRow">
-                <div class="tableCell borderBottom">
-
-                </div>
-                <a class="tableCell borderBottom removeLink" href="#">Remove</a>
-            </div>
-            <div class="tableRow">
-                <div class="tableCell">
-                    Bob Ross
-                </div>
-                <div class="tableCell">
-                    &dollar; 18.95
-                </div>
-            </div>
-            <div class="tableRow">
-                <div class="tableCell borderBottom">
-
-                </div>
-                <a class="tableCell borderBottom removeLink" href="#">Remove</a>
-            </div>
         </div>
         <div id="cartButtons">
             <button id="clearCartButton">Clear Cart</button>
@@ -164,6 +66,7 @@
     </div>
 </footer>
 <script src="js/products.js"></script>
+<script src="js/app.js"></script>
 <script src="js/shop.js"></script>
 </body>
 </html>
