--- a/cart.html
+++ b/cart.html
@@ -62,43 +62,7 @@
     </aside>
     <div id="mainContentContainer">
        <div id="cartCardContainer">
-        <div class="cartCard">
-            <div class="cartCardFlex">
-                <img src="images/images/shop/thumbnails/ClownUmbrella_Thumb.jpg" alt="Clown Umbrella">
-                    <p class="cartTitle">Clown Umbrella</p>
-                    <p class="cartDescription">A porcelain figurine of a clown holding an umbrella and riding a unicycle</p>
-                    <div class="cartQuantity">
-                        <input type="number" value="1" min="1" max="5">
-                    </div>
-                    <p class="cartPrice">&dollar; 29.95</p>
-            </div>
-                <p class="textAlignRight removeMargins"><a class="removeLink" href="#">Remove</a></p>
-        </div>
-        <div class="cartCard">
-            <div class="cartCardFlex">
-                <img src="images/images/shop/thumbnails/ElephantFigurines_Thumb.jpg" alt="Elephant Figurine">
-                    <p class="cartTitle">Elephant Figurines</p>
-                    <p class="cartDescription">White elephant ceramic figurines decorated with various fine color</p>
-                    <div class="cartQuantity">
-                        <input type="number" value="1" min="1" max="5">
-                    </div>
-                    <p class="cartPrice">&dollar; 18.95</p>
-            </div>
-                <p class="textAlignRight removeMargins"><a class="removeLink" href="#">Remove</a></p>
-            
-        </div>
-        <div class="cartCard">
-            <div class="cartCardFlex">
-                <img src="images/images/shop/thumbnails/SquishyCaterpillar_Thumb.jpg" alt="Squishy Caterpillar">
-                    <p class="cartTitle">Squishy Caterpillar</p>
-                    <p class="cartDescription">A squashy, spiky, multi-colored caterpillar</p>
-                    <div class="cartQuantity">
-                        <input type="number" value="1" min="1" max="5">
-                    </div>
-                    <p class="cartPrice">&dollar; 9.99</p>
-            </div>
-            <p class="textAlignRight removeMargins"><a class="removeLink" href="#">Remove</a></p>
-        </div>
+        
        </div>
     </div>
 </main>
@@ -118,5 +82,8 @@
         &copy; Otech Web Programming
     </div>
 </footer>
+<script src="js/products.js"></script>
+<script src="js/app.js"></script>
+<script src="js/cart.js"></script>
 </body>
 </html>
